--- a/Server/TestScriptsWeb.Server.csproj
+++ b/Server/TestScriptsWeb.Server.csproj
@@ -5,6 +5,10 @@
     <LangVersion>7.3</LangVersion>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <WarningLevel>1</WarningLevel>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Blazor.Server" Version="3.0.0-preview9.19465.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.0.0-preview9.19465.2" />
@@ -12,7 +16,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Client\TestScriptsWeb.Client.csproj" />
-    <ProjectReference Include="..\Shared\TestScriptsWeb.Shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
